# pydiskmark

./: .gitignore  Cargo.toml  build.rs  out.json  pdm.py  requirements.txt
config/: cdm8.fio
src/: logger.rs  main.rs
