[package]
name = "pydiskmark"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
lto = "off"
incremental = true

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 0
lto = "off"
incremental = true

[profile.bench]
opt-level = 3
lto = true

[target.'cfg(unix)'.dependencies]

[dependencies]
chrono = "0.4.41"
libc = "0.2.174"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
configparser = { version = "3.1.0", features = ["indexmap"] }
disktest-lib = "1.2.0"
indicatif = "0.18.0"
log = "0.4.27"
serde_json = "1.0.141"
